# tap-rest-template

./: .env  .gitignore  README.md  meltano.yml  pyproject.toml  setup.cfg  tap-rest-template.sh
tap_rest_template/: README.md  auth.py  secret.py  streams.py  tap.py
tap_rest_template/resources/: Test.json
tap_rest_template/tests/: test_lrg_00_core.py  test_med_00_streams.py  test_med_00_tap.py
tap_rest_template/tests/configurations/: fixtures_streams.py  fixtures_tap.py
