[tool.poetry]
name = "tap-rest-template"
version = "0.0.1"
description = "`tap-rest-template` is a Singer tap for Collagia, built with the Meltano SDK for Singer Taps."
authors = ["Andrew Hansen"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.4"
sshtunnel = "0.4.0"
boto3 = "1.17.15"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
requests-mock = "1.9.3"
pycodestyle = "2.7.0"
coverage = "5.5"
pytest-mock = "3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-rest-template = 'tap_rest_template.tap:TapRestTemplate.cli'
